# NEMO_ICLR

./: .gitignore  README.md  environment.yml  pyproject.toml
iclr/: predict_region.ipynb  predict_region.py
iclr/eval/: c4_nested_cross_validation.py  c4_supervise_evaluation.py  c4_vae_evaluation.py  ibl_label_ratio_MLP.py  ibl_label_ratio_linear.py  label_ratio_sweep_per_class.py  nearest_neighbor_region_decoder.py
iclr/train/: acg_VAE_training_seed_sweep.py  wvf_VAE_training_seed_sweep.py
scripts/: compute_3dACG_IBL.py  compute_NP_Ultra_dataset.py  curate_and_process_ibl_dataset.py  gather_ibl_wvf_acg_pair.py  get_c4_wvf_acg3d_pairs.py  ibl_label_sweep.sh  run_c4_acg_vaes.sh  run_c4_wvf_vaes.sh  run_mlp_probe_ultra.py  train_c4_nemo.sh  train_ibl_nemo.sh  train_ultra_nemo.sh
src/celltype_ibl/models/: ACG_augmentation_dataloader.py  AcgAug.py  BiModalEmbedding.py  WvfAug.py  bimodal_embedding_main.py  encoders.py  linear_classifier.py  linear_classifier_multi_folds.py  linear_mlp_test.py  linear_probe.py  metrics.py  mlp_classifier.py  mlp_classifier_multi_folds.py
src/celltype_ibl/params/: config.py  set_params.py
src/celltype_ibl/utils/: c4_data_utils.py  c4_vae_util.py  cell_explorer_data_util.py  cross_session_validation.py  ibl_data_util.py  ibl_data_visualization.py  ibl_eval_utils.py  kenji_allen_data_utils.py  nested_cv_util.py  preprocess.py  ultra_data_util.py  visualize_util.py  wandb.py
