[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "celltype_ibl"
version = "0.0.1"
authors = [
  {name="Han Yu", email="hy2562@columbia.edu"},
]
description = "waveform spiking joint representation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
